...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Afs-EB-N6G">
                                <rect key="frame" x="74" y="220" width="227" height="30"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E32-A1-eYP">
                                <rect key="frame" x="74" y="273" width="227" height="30"/>
                                <constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dKR-gP-pNF">
                                <rect key="frame" x="164" y="361" width="49" height="30"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="0.25915178570000003" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Budgets" id="WFS-eb-Anx">
                        <leftBarButtonItems>
                            <barButtonItem title="Logout" id="kuH-1k-X0z">
...
                                                <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Amout Spent" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4wG-y9-kyE">
                                                    <rect key="frame" x="8" y="98" width="359" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="amountSpent"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mk-oE-j77">
                                <rect key="frame" x="122.5" y="617" width="130" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="addTransaction"/>
                                <state key="normal" title="Add Transaction(s)"/>
                                <connections>
...
